crates/aranya-policy-lang/tests/data/number_out_of_range.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid number
  |
2 | let big_num = 9223372036854775808
  |               ^^^^^^^^^^^^^^^^^^^ number too large to fit in `int`
